--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.1",
+    "js-cookie": "^2.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "typeface-roboto": "0.0.54",
+    "typescript": "^3.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,5 +25,11 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/js-cookie": "^2.2.0",
+    "@types/react": "^16.7.21",
+    "tslint": "^5.12.1",
+    "tslint-loader": "^3.5.4"
+  }
 }
