--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.1",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^3.0.0-alpha.9",
+    "@types/classnames": "^2.2.7",
+    "classnames": "^2.2.6",
     "js-cookie": "^2.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
