--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
     "@material-ui/core": "^3.9.1",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^3.0.0-alpha.9",
-    "@types/classnames": "^2.2.7",
     "classnames": "^2.2.6",
     "js-cookie": "^2.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
-    "typeface-roboto": "0.0.54",
-    "typescript": "^3.2.4"
+    "typeface-roboto": "0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,8 +29,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/js-cookie": "^2.2.0",
-    "@types/react": "^16.7.21",
     "tslint": "^5.12.1",
     "tslint-loader": "^3.5.4"
   }
